// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiHTTPError .safeSerialize 1`] = `
Object {
  "code": 404,
  "headers": Object {
    "a": "1",
  },
  "logs": Array [],
  "method": "GET",
  "name": "ApiHTTPError",
}
`;

exports[`HTTPError .safeSerialize 1`] = `
Object {
  "code": 404,
  "headers": Object {
    "a": "1",
  },
  "logs": Array [],
  "method": "GET",
  "name": "HTTPError",
  "url": "https://yandex.ru",
}
`;

exports[`HTTPError .serialize 1`] = `
Object {
  "code": 404,
  "headers": Object {
    "a": "1",
  },
  "logs": Array [],
  "method": "GET",
  "name": "HTTPError",
  "url": "https://yandex.ru",
}
`;
